--- a/checkout.html
+++ b/checkout.html
@@ -7,139 +7,115 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
   <style>
-  /* Default sudah pakai Tailwind, ini tambahan khusus responsif */
-  @media (max-width: 400px) {
-    section.bg-white.p-8 {
-      padding: 1rem; /* p-4 */
-    }
-
-    #pay-btn {
-      margin-left: 0 !important; /* override inline style */
-      width: 100% !important;
-    }
-
-    #checkout-list > div img {
-      width: 60px !important;
-      height: 60px !important;
-    }
-
-    #checkout-list > div {
-      gap: 1rem !important;
-      padding: 1rem !important;
-    }
-
-    .flex.justify-between.text-lg {
-      font-size: 1rem !important; /* text-base */
-    }
+      @keyframes belokKiriLoop {
+    0% { transform: translateX(0); }
+    50% { transform: translateX(-6px); }
+    100% { transform: translateX(0); }
   }
 
-  @keyframes slide-left {
-  0% { transform: translateX(0); }
-  50% { transform: translateX(-6px); }
-  100% { transform: translateX(0); }
-}
-
-.animated-slide {
-  animation: slide-left 0.3s ease-in-out infinite;
-}
-</style>
-
+  .belok-loop {
+    animation: belokKiriLoop 1.2s ease-in-out infinite;
+  }
+    .belok-loop {
+      animation: belokKiriLoop 0.5s ease-in-out infinite;
+    }
+  </style>
 </head>
 <body class="bg-gray-100 min-h-screen flex flex-col">
 
-  <!-- Header -->
+<!-- Header -->
 <header class="bg-white p-4 shadow-md flex items-center justify-between">
   <h1 class="text-xl font-bold">Checkout</h1>
-
-<a href="index.html"
-   class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded-md shadow-md flex items-center gap-2">
-  <i class="ri-arrow-left-line text-xl animated-slide"></i>
-  <span>Kembali</span>
-</a>
-
-
+  <a href="index.html" class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded-md shadow-md flex items-center gap-2">
+    <i class="ri-arrow-left-line text-xl belok-loop"></i>
+    <span>Kembali</span>
+  </a>
 </header>
 
-  <!-- List Produk -->
-  <main class="flex-1 p-4 space-y-4" id="checkout-list">
-    <!-- Produk akan ditambahkan oleh JavaScript -->
-  </main>
+<!-- Konten lainnya... -->
+<main class="flex-1 p-4 space-y-4" id="checkout-list"></main>
 
-  <!-- Ringkasan dan Tombol Bayar -->
 <section class="bg-white p-4 shadow-md rounded-t-xl">
-  <div class="flex justify-between text-lg font-semibold mb-8">
+  <div class="flex justify-between text-lg font-semibold mb-4">
     <span>Total</span>
     <span id="total-price">Rp0</span>
   </div>
-  <button id="pay-btn"
-    class="bg-green-500 hover:bg-green-600 text-white font-semibold py-2 px-6 rounded-md transition duration-300 w-full mb-14">
+  <button id="pay-btn" class="bg-green-500 hover:bg-green-600 text-white font-semibold py-2 px-6 rounded-md transition duration-300 w-full mb-14">
     Bayar Sekarang
   </button>
 </section>
 
+<script>
+  let cart = JSON.parse(localStorage.getItem('checkout')) || [];
+  const checkoutList = document.getElementById('checkout-list');
+  const totalPriceElement = document.getElementById('total-price');
 
+  function updateTotal() {
+    let total = 0;
+    cart.forEach(item => {
+      const price = parseInt(item.price.replace(/\D/g, '')) || 0;
+      total += price * (item.qty || 1);
+    });
+    totalPriceElement.textContent = `Rp${total.toLocaleString('id-ID')}`;
+  }
 
-  <script>
-    const cart = JSON.parse(localStorage.getItem('checkout')) || [];
-    const checkoutList = document.getElementById('checkout-list');
-    const totalPriceElement = document.getElementById('total-price');
+  function saveCart() {
+    localStorage.setItem('checkout', JSON.stringify(cart));
+    renderCart();
+  }
 
+  function renderCart() {
+    checkoutList.innerHTML = '';
     if (cart.length === 0) {
       checkoutList.innerHTML = `<div class="text-center text-gray-500 mt-10">Keranjang kosong.</div>`;
-    } else {
-      let total = 0;
+      totalPriceElement.textContent = 'Rp0';
+      return;
+    }
 
-      cart.forEach((item, index) => {
-        const productDiv = document.createElement('div');
-        productDiv.className = 'bg-white p-4 rounded-lg shadow flex items-center gap-4';
+    cart.forEach((item, index) => {
+      const div = document.createElement('div');
+      div.className = 'bg-white p-4 rounded-lg shadow flex items-center gap-4';
 
-        const img = document.createElement('img');
-        img.src = item.image;
-        img.alt = item.title;
-        img.className = 'w-20 h-20 object-cover rounded';
-
-        const info = document.createElement('div');
-        info.className = 'flex-1';
-        info.innerHTML = `
+      div.innerHTML = `
+        <img src="${item.image}" alt="${item.title}" class="w-20 h-20 object-cover rounded" />
+        <div class="flex-1">
           <h3 class="text-md font-semibold">${item.title}</h3>
           <p class="text-sm text-gray-500">${item.desc}</p>
           <p class="text-orange-500 font-bold mt-1">${item.price}</p>
-        `;
+          <div class="flex items-center gap-2 mt-2">
+            <button class="text-white bg-gray-400 hover:bg-gray-600 px-2 py-1 rounded" onclick="changeQty(${index}, -1)">-</button>
+            <span class="px-3">${item.qty || 1}</span>
+            <button class="text-white bg-gray-700 hover:bg-gray-900 px-2 py-1 rounded" onclick="changeQty(${index}, 1)">+</button>
+          </div>
+        </div>
+        <button onclick="removeItem(${index})" class="text-red-500 hover:text-red-700"><i class="ri-delete-bin-line text-xl"></i></button>
+      `;
+      checkoutList.appendChild(div);
+    });
 
-        const removeBtn = document.createElement('button');
-        removeBtn.className = 'text-red-500 hover:text-red-700';
-        removeBtn.innerHTML = '<i class="ri-delete-bin-line text-xl"></i>';
-        removeBtn.onclick = () => {
-          cart.splice(index, 1);
-          localStorage.setItem('checkout', JSON.stringify(cart));
-          location.reload();
-        };
+    updateTotal();
+  }
 
-        productDiv.appendChild(img);
-        productDiv.appendChild(info);
-        productDiv.appendChild(removeBtn);
-        checkoutList.appendChild(productDiv);
-
-        // Hitung total
-        const price = parseInt(item.price.replace(/\D/g, '')) || 0;
-        total += price;
-      });
-
-      totalPriceElement.textContent = `Rp${total.toLocaleString('id-ID')}`;
+  function changeQty(index, delta) {
+    cart[index].qty = (cart[index].qty || 1) + delta;
+    if (cart[index].qty <= 0) {
+      cart.splice(index, 1);
     }
+    saveCart();
+  }
 
-     // Tambah event listener untuk tombol bayar
-  const payBtn = document.getElementById("pay-btn");
-  payBtn.addEventListener("click", () => {
+  function removeItem(index) {
+    cart.splice(index, 1);
+    saveCart();
+  }
+
+  document.getElementById("pay-btn").addEventListener("click", () => {
     if (cart.length === 0) {
       alert("Keranjang kosong.");
       return;
     }
 
-    // Ambil riwayat lama
     const history = JSON.parse(localStorage.getItem("history")) || [];
-
-    // Tambah transaksi baru ke riwayat
     history.push({
       items: cart,
       total: totalPriceElement.textContent,
@@ -147,16 +123,14 @@
       status: "Belum Dibayar"
     });
 
-    // Simpan kembali ke localStorage
     localStorage.setItem("history", JSON.stringify(history));
-
-    // Hapus isi keranjang
     localStorage.removeItem("checkout");
-
-    // Redirect ke halaman sukses atau alert
     alert("Pembayaran berhasil. Terima kasih!");
-    window.location.href = "index.html"; // Atau halaman sukses.html jika kamu punya
+    window.location.href = "index.html";
   });
-  </script>
+
+  renderCart();
+</script>
+
 </body>
 </html>
