--- a/index.html
+++ b/index.html
@@ -8,97 +8,57 @@
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Passero+One&display=swap" rel="stylesheet" />
   <style>
-    .logo-font {
-      font-family: 'Passero One', cursive;
-    }
-
+    .logo-font { font-family: 'Passero One', cursive; }
     nav {
       background-color: rgba(0, 0, 0, 0.75);
       backdrop-filter: blur(4px);
-      -webkit-backdrop-filter: blur(4px);
     }
-
     .glow {
-      text-shadow:
-        0 0 1px #0f0,
-        0 0 4px #fff,
-        0 0 7px #0f0;
+      text-shadow: 0 0 1px #0f0, 0 0 4px #fff, 0 0 7px #0f0;
     }
-
     @keyframes neonPulse {
-      0% {
-        text-shadow: none;
-        color: #a6bfcf80;
-      }
+      0% { text-shadow: none; color: #a6bfcf80; }
       20%, 80% {
         text-shadow: 0 0 6px #dff9ff, 0 0 12px #c6e9f7, 0 0 24px #b0d4e3;
         color: #dff9ff;
       }
-      100% {
-        text-shadow: none;
-        color: #a6bfcf80;
-      }
+      100% { text-shadow: none; color: #a6bfcf80; }
     }
-
-    .neon-glow {
-      animation: neonPulse 8s infinite;
-    }
-
+    .neon-glow { animation: neonPulse 8s infinite; }
     .instagram-icon i {
       background: linear-gradient(45deg, #feda75, #fa7e1e, #d62976, #962fbf, #4f5bd5);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       display: inline-block;
-      text-shadow:
-         0 0 3px #fff,
-         0 0 5px #fff,
-         0 0 3px #feda75,
-         0 0 6px #fa7e1e,
-         0 0 4px #d62976,
-         0 0 1px #962fbf,
-         0 0 0px #4f5bd5;
+      text-shadow: 0 0 3px #fff, 0 0 5px #fff, 0 0 3px #feda75,
+                   0 0 6px #fa7e1e, 0 0 4px #d62976,
+                   0 0 1px #962fbf, 0 0 0px #4f5bd5;
       animation: blinkOnOff 4s infinite step-start;
     }
-
     @keyframes blinkOnOff {
-      0%, 49.9% {
-        opacity: 1;
-        text-shadow:
-          0 0 3px #fff,
-          0 0 5px #fff,
-          0 0 3px #feda75,
-          0 0 6px #fa7e1e,
-          0 0 4px #d62976,
-          0 0 1px #962fbf,
-          0 0 0px #4f5bd5;
-      }
-      50%, 100% {
-        opacity: 0;
-        text-shadow: none;
-      }
+      0%, 49.9% { opacity: 1; }
+      50%, 100% { opacity: 0; text-shadow: none; }
     }
   </style>
 </head>
 <body class="bg-gray-100">
 
 <!-- Navbar -->
-<nav class="bg-black/70 backdrop-blur-sm text-white px-4 py-3 h-14 flex items-center justify-center sticky top-0 z-10 relative">
+<nav class="text-white px-4 py-3 h-14 flex items-center justify-center sticky top-0 z-10 relative">
   <div class="absolute left-4 top-1/2 -translate-y-1/2 flex items-center space-x-4">
-    <a href="https://wa.me/6282197770219" target="_blank" class="text-3xl text-white hover:text-gray-300 hover:scale-110 transition duration-200">
+    <a href="https://wa.me/6282197770219" target="_blank" class="text-3xl hover:text-gray-300 hover:scale-110 transition">
       <i class="ri-whatsapp-line"></i>
     </a>
-    <a href="https://instagram.com/rhanray_" target="_blank" class="text-3xl text-white hover:text-gray-300 hover:scale-110 transition duration-200">
+    <a href="https://instagram.com/rhanray_" target="_blank" class="text-3xl hover:text-gray-300 hover:scale-110 transition">
       <i class="ri-instagram-line"></i>
     </a>
   </div>
-  <div class="logo-font neon-glow text-3xl font-bold">
-    DZULFIKAR
-  </div>
+  <div class="logo-font neon-glow text-3xl font-bold">DZULFIKAR</div>
   <div class="absolute right-4 top-1/2 -translate-y-1/2 flex items-center space-x-4">
-    <a href="/profil" class="text-3xl text-white hover:text-gray-300 hover:scale-110 transition duration-200">
+    <a href="login.html" class="text-3xl hover:text-gray-300 hover:scale-110 transition">
       <i class="ri-user-line"></i>
     </a>
-    <a href="checkout.html" class="relative text-3xl text-white hover:text-gray-300 hover:scale-110 transition duration-200">
+    <a href="checkout.html" class="relative text-3xl hover:text-gray-300 hover:scale-110 transition">
       <i class="ri-shopping-cart-line"></i>
       <span id="cart-count" class="absolute -top-2 -right-2 bg-red-600 text-xs rounded-full w-5 h-5 flex items-center justify-center font-semibold">0</span>
     </a>
@@ -123,7 +83,8 @@
 
   function updateCartCount() {
     const cart = JSON.parse(localStorage.getItem("checkout")) || [];
-    cartCount.textContent = cart.length;
+    const totalQty = cart.reduce((sum, item) => sum + (item.qty || 1), 0);
+    cartCount.textContent = totalQty;
   }
 
   updateCartCount();
@@ -150,8 +111,7 @@
     price.textContent = 'Rp250.000';
 
     const button = document.createElement('button');
-    button.className = 'mt-auto bg-black hover:bg-gray-800 text-white font-semibold py-2 px-4 rounded transition duration-300 relative flex items-center justify-center gap-2';
-
+    button.className = 'mt-auto bg-black hover:bg-gray-800 text-white font-semibold py-2 px-4 rounded transition flex items-center justify-center gap-2 relative';
     button.innerHTML = '<i class="ri-shopping-cart-line absolute left-4"></i><span>Tambah ke Keranjang</span>';
 
     button.addEventListener('click', () => {
@@ -159,13 +119,20 @@
         title: title.textContent,
         desc: desc.textContent,
         price: price.textContent,
-        image: img.src
+        image: img.src,
+        qty: 1
       };
 
       const cart = JSON.parse(localStorage.getItem("checkout")) || [];
-      cart.push(item);
-      localStorage.setItem("checkout", JSON.stringify(cart));
+      const existing = cart.find(p => p.title === item.title);
 
+      if (existing) {
+        existing.qty = (existing.qty || 1) + 1;
+      } else {
+        cart.push(item);
+      }
+
+      localStorage.setItem("checkout", JSON.stringify(cart));
       updateCartCount();
     });
 
@@ -174,7 +141,6 @@
     productDiv.appendChild(desc);
     productDiv.appendChild(price);
     productDiv.appendChild(button);
-
     container.appendChild(productDiv);
   }
 </script>
